--- a/TestLens/app/src/main/AndroidManifest.xml
+++ b/TestLens/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
-<manifest package="com.nickrout.testlens"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="com.nickrout.testlens"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
