--- a/LensLauncher/app/src/main/AndroidManifest.xml
+++ b/LensLauncher/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:name=".ui.HomeActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Wallpaper.NoTitleBar.Fullscreen"
+            android:theme="@style/HomeTheme"
             android:launchMode="singleTask"
             android:stateNotNeeded="true">
             <intent-filter>
