--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:theme="@style/HomeTheme"
             android:launchMode="singleTask"
             android:stateNotNeeded="true">
-            <intent-filter>
+            <intent-filter android:priority="0">
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.HOME" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -27,7 +27,7 @@
             android:name=".ui.SettingsActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
-            <intent-filter>
+            <intent-filter android:priority="1">
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
