AsyncTask Loading and... Updating!
Results in faster app launch and adds/removes apps asynchronously as
they change on the system

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,15 +23,9 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".ui.HomeActivity$AppAddedBroadcastReceiver">
+        <receiver android:name=".ui.HomeActivity$AppsUpdatedReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.PACKAGE_ADDED" />
-                <data android:scheme="package"/>
-            </intent-filter>
-        </receiver>
-
-        <receiver android:name=".ui.HomeActivity$AppRemovedBroadcastReceiver">
-            <intent-filter>
                 <action android:name="android.intent.action.PACKAGE_REMOVED" />
                 <data android:scheme="package"/>
             </intent-filter>
