Reliable handling of updated apps
Simpler, more robust method to detect and handle apps that are added,
removed or changed. Also some refactoring.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.PACKAGE_ADDED" />
                 <action android:name="android.intent.action.PACKAGE_REMOVED" />
+                <action android:name="android.intent.action.PACKAGE_CHANGED" />
                 <data android:scheme="package"/>
             </intent-filter>
         </receiver>
