--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 10 13:34:31 SAST 2016
-sdk.dir=/Users/nicholasrout/Library/Android/sdk
+#Thu May 19 22:45:22 IST 2016
+sdk.dir=/home/rish/Downloads/adt-bundle-linux-x86_64-20140702/sdk
