--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 # generated files
 bin/
 gen/
+out/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -22,7 +23,9 @@ local.properties
 # Android Studio
 .idea/
 .gradle
+build/
 /*/local.properties
+local.properties
 /*/out
 /*/*/build
 /*/*/production
@@ -31,3 +34,10 @@ local.properties
 *.ipr
 *~
 *.swp
+proguard/
+*.log
+.navigation/
+captures/
+
+# Keystore files
+*.jks
