--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.pavelsikun:vintage-chroma:1.4'
+    compile 'com.github.satyan:sugar:1.5'
 }
