--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.pavelsikun:vintage-chroma:1.4.1'
     compile 'com.github.satyan:sugar:1.5'
-    compile 'com.afollestad.material-dialogs:core:0.8.5.9'
+    compile 'com.afollestad.material-dialogs:core:0.8.5.8'
+    compile 'com.afollestad.material-dialogs:commons:0.8.5.8'
 }
