--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="nickrout.lenslauncher" >
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="nickrout.lenslauncher" >
 
     <application
         android:name="com.orm.SugarApp"
@@ -8,7 +9,6 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <meta-data
             android:name="DATABASE"
