--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,9 +26,10 @@
         <activity
             android:name=".ui.HomeActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTask"
-            android:screenOrientation="portrait"
+            android:launchMode="singleInstance"
             android:stateNotNeeded="true"
+            android:taskAffinity=""
+            android:screenOrientation="portrait"
             android:theme="@style/HomeTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
