--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="nickrout.lenslauncher">
 
     <application
-        android:name="com.orm.SugarApp"
+        android:name=".LensLauncherApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -26,7 +26,7 @@
         <activity
             android:name=".ui.HomeActivity"
             android:label="@string/app_name"
-            android:launchMode="singleInstance"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
             android:taskAffinity=""
@@ -38,23 +38,13 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".ui.HomeActivity$AppsUpdatedReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.PACKAGE_ADDED" />
-                <action android:name="android.intent.action.PACKAGE_REMOVED" />
-                <action android:name="android.intent.action.PACKAGE_CHANGED" />
-                <action android:name="android.intent.action.PACKAGE_REPLACED" />
-                <data android:scheme="package" />
-            </intent-filter>
-        </receiver>
-
         <activity
             android:name=".ui.SettingsActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -67,12 +57,6 @@
         </activity>
 
         <activity
-            android:name=".ui.AppArrangerActivity"
-            android:label="@string/activity_title_arranger"
-            android:screenOrientation="portrait">
-        </activity>
-
-        <activity
             android:name=".ui.FakeLauncherActivity"
             android:enabled="false">
             <intent-filter>
@@ -81,6 +65,19 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <receiver android:name=".util.BroadcastReceivers$AppsUpdatedReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_ADDED" />
+                <action android:name="android.intent.action.PACKAGE_REMOVED" />
+                <action android:name="android.intent.action.PACKAGE_CHANGED" />
+                <action android:name="android.intent.action.PACKAGE_REPLACED" />
+                <data android:scheme="package" />
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name=".util.BroadcastReceivers$AppsLoadedReceiver">
+        </receiver>
 
     </application>
 
