--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.afollestad.material-dialogs:commons:0.8.5.8'
     compile 'com.makeramen:dragsortadapter:1.3.0'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
 }
