Faster sorting! And sort by open count
Waaaaay faster :-D no need to reload apps on sort selection, duh

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,9 @@
             </intent-filter>
         </receiver>
 
+        <receiver android:name=".util.BroadcastReceivers$AppsSortedReceiver">
+        </receiver>
+
         <receiver android:name=".util.BroadcastReceivers$AppsLoadedReceiver">
         </receiver>
 
