Updated libs for Android N
Also specified no multi-window support for home screen, did some
settings refactoring and some tweaks for new Material Dialogs version

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
             android:launchMode="singleTask"
             android:stateNotNeeded="true"
             android:taskAffinity=""
-            android:theme="@style/HomeTheme">
+            android:theme="@style/HomeTheme"
+            android:resizeableActivity="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.HOME" />
@@ -58,7 +59,8 @@
 
         <activity
             android:name=".ui.FakeLauncherActivity"
-            android:enabled="false">
+            android:enabled="false"
+            android:resizeableActivity="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.HOME" />
