--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,12 @@
         android:name=".LensLauncherApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:supportsRtl="true">
+
         <meta-data
             android:name="DATABASE"
             android:value="app_persistent.db" />
@@ -35,6 +38,9 @@
                 <category android:name="android.intent.category.HOME" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            <meta-data
+                android:name="android.app.shortcuts"
+                android:resource="@xml/shortcuts" />
         </activity>
 
         <activity
@@ -86,6 +92,9 @@
         </receiver>
 
         <receiver android:name=".background.BroadcastReceivers$BackgroundChangedReceiver">
+        </receiver>
+
+        <receiver android:name=".background.BroadcastReceivers$NightModeReceiver">
         </receiver>
 
     </application>
