--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,11 +36,11 @@
 
         <activity
             android:name=".ui.HomeActivity"
-            android:label="@string/app_name"
             android:launchMode="singleTask"
             android:stateNotNeeded="true"
             android:taskAffinity=""
-            android:theme="@style/HomeTheme">
+            android:theme="@style/HomeTheme"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.HOME" />
@@ -50,11 +50,11 @@
 
         <activity
             android:name=".ui.SettingsActivity"
-            android:label="@string/app_name"
             android:launchMode="singleTask"
             android:stateNotNeeded="true"
             android:taskAffinity=""
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -72,7 +72,8 @@
 
         <activity
             android:name=".ui.FakeLauncherActivity"
-            android:enabled="false">
+            android:enabled="false"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.HOME" />
@@ -80,7 +81,9 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".background.BroadcastReceivers$AppsUpdatedReceiver">
+        <receiver
+            android:name=".background.BroadcastReceivers$AppsUpdatedReceiver"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.PACKAGE_ADDED" />
                 <action android:name="android.intent.action.PACKAGE_REMOVED" />
